# Latent

./: .gitignore  AGENT_17_COMPLETION_REPORT.md  AGENT_24_COMPLETION_REPORT.md  AGENT_29_COMPLETION_REPORT.md  AGENT_34_COMPLETION_SUMMARY.md  AGENT_36_COMPLETION_SUMMARY.md  AGENT_43_SUMMARY.md  AGENT_44_COMPLETION.md  AGENT_44_SUMMARY.txt  AGENT_50_COMPLETION_NOTES.md  AGENT_51_COMPLETION.md  AGENT_52_COMPLETION.md  AGENT_52_SUMMARY.md  AGENT_54_COMPLETION_REPORT.md  AGENT_54_INTEGRATION_NOTES.md  AGENT_65_COMPLETION_SUMMARY.md  AGENT_65_FINAL_REPORT.md  AGENT_65_INTEGRATION_CHECKLIST.md  CLAUDE.md  DAY_3_MANUAL_TEST_CHECKLIST.md  DAY_3_SUMMARY_FOR_NICK.md  LAUNCH_APP.md  MANUAL_PUSH_SETUP.md  MOUSE_CONTROLS_SOLUTION.md  README.md  STATUS.md  VTK_BRIDGE_ARCHITECTURE.md  cleanup_apps.py  kill_port.py  launch.py  main.py  requirements.txt  setup.py  test_camera_controls.py  test_day3_integration.py  test_edit_mode.py  test_final_fix.py  test_rhino_connection.py
.claude/commands/: build-cpp.md  integrate-day1.md  launch-day1-evening.md  launch-day1-morning.md  launch-day10-morning.md  launch-day2-evening.md  launch-day2-morning.md  launch-day3-morning.md  launch-day4-evening.md  launch-day4-morning.md  launch-day5-morning.md  launch-day6-morning.md  launch-day7-morning.md  launch-day8-morning.md  launch-day9-morning.md
app/: vtk_bridge.py
app/analysis/: __init__.py  differential_decomposition.py  differential_lens.py  laplacian.py  lens_manager.py  spectral_decomposition.py  spectral_lens.py
app/bridge/: geometry_receiver.py  live_bridge.py  rhino_bridge.py  subd_fetcher.py
app/export/: __init__.py  nurbs_serializer.py  rhino_formats.py
app/geometry/: constraint_renderer.py  curvature.py  curvature_renderer.py  region_renderer.py  spectral_renderer.py  subd_display.py  subd_renderer.py  test_meshes.py
app/operations/: INTEGRATION.md  README.md  __init__.py  demo_operations.py  region_operations.py
app/state/: app_state.py  edit_mode.py  iteration_manager.py  parametric_region.py
app/ui/: __init__.py  analysis_panel.py  camera_controller.py  constraint_panel.py  dialogs.py  edit_mode_toolbar.py  iteration_timeline.py  mold_params_dialog.py  picker.py  progress_dialog.py  region_color_manager.py  region_editor_widget.py  region_list.py  region_list_widget.py  region_properties_dialog.py  selection_info_panel.py  spectral_viz_widget.py  styles.py  subd_viewport.py  ui_helpers.py  viewport_3d.py  viewport_base.py  viewport_helpers.py  viewport_layout.py
app/utils/: __init__.py  error_handling.py
app/workflow/: ARCHITECTURE.md  README.md  __init__.py  example_usage.py  mold_generator.py
cpp_core/: AGENT_16_COMPLETION.md  AGENT_27_COMPLETION.md  AGENT_30_COMPLETION.md  AGENT_3_COMPLETION.md  AGENT_40_COMPLETION.md  AGENT_42_COMPLETION.md  AGENT_43_COMPLETION.md  AGENT_46_VALIDATION.md  AGENT_47_INTEGRATION_NOTES.md  AGENT_49_COMPLETION.md  AGENT_49_SUMMARY.md  AGENT_9_COMPLETION.md  BUILD.md  CMakeLists.txt  INTEGRATION.md  check_validator_syntax.cpp  test_curvature.cpp  test_draft_checker.cpp  test_draft_simple.cpp  test_draft_transform.cpp  test_limit_evaluation.cpp  test_mold_solid.cpp  test_nurbs_bindings.py  test_nurbs_fitting.cpp  test_nurbs_header.cpp  test_subd_evaluator.cpp  test_validator_header.cpp  verify_nurbs_header.sh  verify_validator_header.sh
cpp_core/analysis/: AGENT_26_COMPLETE.md  AGENT_26_VERIFICATION.md  curvature_analyzer.cpp  curvature_analyzer.h  test_curvature_header.cpp
cpp_core/constraints/: constraint_report.cpp  constraint_validator.cpp  draft_checker.cpp  undercut_detector.cpp  validator.h
cpp_core/geometry/: AGENT_46_COMPLETE.md  NURBS_INTEGRATION_NOTES.md  draft_transform.cpp  mold_solid.cpp  nurbs_fitting.cpp  nurbs_generator.h  subd_evaluator.cpp  subd_evaluator.h  types.h
cpp_core/python_bindings/: bindings.cpp  py_bindings.cpp  test_bindings.py  test_constraint_bindings.py
cpp_core/tests/: CMakeLists.txt  test_constraints.cpp  test_curvature.cpp  test_nurbs.cpp  test_subd_evaluator.cpp
cpp_core/utils/: mesh_mapping.cpp
docs/: AGENT_31_COMPLETION_SUMMARY.md  AGENT_31_DELIVERABLES_CHECKLIST.md  AGENT_31_INTEGRATION_GUIDE.md  AGENT_31_VISUAL_DEMO.md  AGENT_64_COMPLETION_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CURVATURE_VISUALIZATION.md  DEVELOPER_GUIDE.md  DIFFERENTIAL_LENS.md  IMPLEMENTATION_ROADMAP.md  LOSSLESS_VERIFICATION.md  PHASE_0_COMPLETE.md  PROJECT_STATUS.md  RHINO_BRIDGE_SETUP.md  TUTORIAL.md  USER_GUIDE.md
docs/reference/: UX_UI_DESIGN_SPECIFICATION.md  architecture_subd_alt.md  (+4 more)
examples/: CREATE_EXAMPLE_FILES.md  README.md  constraint_visualization_example.py  curvature_visualization_demo.py  differential_lens_demo.py
rhino/: AGENT_06_COMPLETION_SUMMARY.md  INTEGRATION_NOTES.md  QUICK_START.txt  README_HTTP_SERVER.md  example_response.json  grasshopper_http_server.py  grasshopper_http_server_control_cage.py  grasshopper_http_server_mesh.py  grasshopper_http_server_simple.py  grasshopper_manual_push.py  grasshopper_server_control.py  http_server.py  test_gh_server.py
tests/: AGENT_57_INTEGRATION_NOTES.md  AGENT_59_COMPLETION_REPORT.md  AGENT_60_COMPLETION_SUMMARY.md  DAY7_TEST_INTEGRATION.md  README.md  agent_56_final_verification.py  conftest.py  edge_picker_integration_example.py  run_all_tests.sh  test_agent22_components.py  test_analysis_complete.py  test_analysis_panel_logic.py  test_analysis_panel_ui.py  test_constraint_panel.py  test_constraint_renderer.py  test_curvature_bindings.py  test_curvature_comprehensive.py  test_curvature_visualization.py  test_day1_integration.py  test_day2_morning_integration.py  test_differential_lens.py  test_edge_picker.py  test_edge_picker_structure.py  test_edit_mode.py  test_error_handling.py  test_error_handling_basic.py  test_export.py  test_face_picker.py  test_grasshopper_post.py  test_iteration_manager.py  test_laplacian.py  test_laplacian_standalone.py  test_layout.py  test_lens_manager.py  test_live_bridge.py  test_lossless.py  test_main_window.py  test_mold.json  test_mold_import.py  test_mold_params_dialog.py  (+35 more)
(+130 files in other folders)
